--- a/src/components/Player/Player.css
+++ b/src/components/Player/Player.css
@@ -18,13 +18,13 @@
   transition-timing-function: ease-in-out;
   position: absolute;
   background-color: white;
-  width: 100%;
+  width: calc(100% - 30px);
   top: 0;
   /* bottom: 148px; */
   z-index: -1;
 }
 .popup-open {
-  top: -348px;
+  top: -350px;
   box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.2);
 }
 /* popup button */
@@ -81,7 +81,7 @@
   padding: 3px 5px;
 }
 .popup .playlists .playlist-list {
-  max-height: 194px;
+  height: 190px;
   overflow-y: scroll;
 }
 .active-popup {
